--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 plugins {
-	id 'java'
 	id 'org.springframework.boot' version '2.7.12'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'application'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 repositories {
@@ -18,12 +19,15 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
+	def var = implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
+	var
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-
+application {
+	mainClassName = 'com.example.vuebackend.VueBackendApplication'
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
