#_Qoddi_배포포트번호수정, 시간대 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,6 +19,7 @@ spring:
       max-age: 3600
   jackson:
     property-naming-strategy: SNAKE_CASE
+    time-zone: Asia/Seoul
 
 spring.jpa.open-in-view: false
 spring.jpa.hibernate.ddl-auto: update
