--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.h2database:h2'
+	implementation 'commons-fileupload:commons-fileupload:1.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	def var = implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
 	var
@@ -31,9 +33,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-springBoot {
-	mainClass = 'com.example.vuebackend' // 실제 메인 클래스 패키지와 이름으로 변경해야 합니다.
-}
+//springBoot {
+//	mainClass = 'com.example.vuebackend' // 실제 메인 클래스 패키지와 이름으로 변경해야 합니다.
+//}
 application {
 	mainClassName = 'com.example.vuebackend.VueBackendApplication'
 }
