#_백엔드 전격 수정..v2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,15 @@
 server:
-  port: 8080
+  port: 8082
 
 spring:
-  web:
-    resources:
-        static-locations: classpath:/upload/
-  security:
-    user:
-      name: admin
-      password: password
-    headers:
-      content-security-policy: "default-src 'self'; img-src 'self' data:"
-    cors:
-      allowed-origins: "*"
-      allowed-methods: "*"
-      allowed-headers: "*"
-      allow-credentials: true
-      max-age: 3600
   jackson:
     property-naming-strategy: SNAKE_CASE
-    time-zone: Asia/Seoul
-
+  web:
+    resources:
+      static-locations: "classpath:/resources/"
+spring.mvc.static-path-pattern: /static/**
 spring.jpa.open-in-view: false
-#배포시 수정!!!
-#spring.jpa.hibernate.ddl-auto: create-drop
-spring.jpa.hibernate.ddl-auto: update
-#배포시 수정!!!
+spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.show-sql: true
 spring.jpa.generate-ddl: true
 spring.jpa.defer-datasource-initialization: true
@@ -37,8 +21,8 @@ spring.h2.console.enabled: true
 spring.h2.console.path: /h2-console
 spring.h2.console.settings.web-allow-others: true
 
-file:
-  upload-dir: static/upload/
 spring.servlet.multipart.enabled: true
 spring.servlet.multipart.max-file-size: 10MB
 spring.servlet.multipart.max-request-size: 10MB
+
+
