--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,14 @@
 plugins {
+	id 'java'
 	id 'org.springframework.boot' version '2.7.12'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-	id 'application'
 }
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-jar {
-	enabled = false
-	manifest {
-		attributes 'Main-Class': 'com.example.vuebackend.VueBackendApplication'
-	}
-}
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = '17'
 }
 
 repositories {
@@ -24,21 +17,13 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'com.h2database:h2'
-	implementation 'commons-fileupload:commons-fileupload:1.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	def var = implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
-	var
+	implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
-//springBoot {
-//	mainClass = 'com.example.vuebackend' // 실제 메인 클래스 패키지와 이름으로 변경해야 합니다.
-//}
-application {
-	mainClassName = 'com.example.vuebackend.VueBackendApplication'
-}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
