--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation group: 'com.h2database', name: 'h2', version: '1.3.176'
 	compileOnly 'org.projectlombok:lombok'
+	testImplementation 'org.apache.httpcomponents:httpclient'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
