--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,7 @@ spring:
     property-naming-strategy: SNAKE_CASE
   web:
     resources:
-      static-locations: classpath:/upload/, classpath:/static/, classpath:/public/
-
-spring.mvc.static-path-pattern: /static/**
+      static-locations: classpath:/static/, classpath:/upload/
 spring.jpa.open-in-view: false
 spring.jpa.hibernate.ddl-auto: create-drop
 spring.jpa.show-sql: true
